# xtride

./: CITATION.cff  Cargo.toml  LICENSE  README.md
data/: README.md  dirty_test_hashes.txt  strip_elf_debug.sh
data/extractor/: Cargo.toml  README.md
data/extractor/src/: lib.rs  main.rs
data/ida_collection/: IDA_9_MIGRATION_GUIDE.md  dataset.diff  decompiler_scripts.diff  generate.py  initialize_ida.py
lib/: db.rs  entry.rs  lib.rs  ngram.rs  predict.rs  retyper.rs  tokenizer.rs  types.rs  vocab.rs
