[package]
name = "xtride"
version = "3.0.0"
edition = "2021"

[workspace]
members = ["bin"]
resolver = "2"

[lib]
name = "xtride"
path = "lib/lib.rs"

[features]
default = []
retyper = ["dep:bias-core"]

[dependencies]
anyhow = "1"
bias-core = { git = "https://github.com/vulhunt-re/vulhunt.git", branch = "dev", package = "bias-core", optional = true, features = ["decompiler"] }
bytecheck = "0.8"
hashbrown = { version = "0.15", features = ["allocator-api2", "serde"] }
log = "0.4"
memmap2 = "0.9"
once_cell = "1.21.4"
ordered-float = "5.0.0"
ouroboros = "0.18"
regex = "1"
rkyv = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10"
thiserror = "2"
